fix x scroller covering text

--- a/src/style.css
+++ b/src/style.css
@@ -46,7 +46,8 @@ section {
     margin-left: 1rem;
     display: inline-block;
     height: 1.2rem;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .todoContainer .todoText {
